# dawnchat-api

./: CHANGELOG.md  Cargo.toml  README.md  Revolt.toml  compose.yml  default.nix
.github/workflows/: publish-crates.yml
crates/bonfire/: Cargo.toml
crates/bonfire/src/: websocket.rs
crates/core/config/: Cargo.toml  Revolt.toml
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/src/events/: rabbit.rs
crates/core/database/src/voice/: mod.rs
crates/core/database/templates/: deletion.html  reset.html  suspension.html
crates/core/files/: Cargo.toml
crates/core/models/: Cargo.toml
crates/core/models/src/v0/: audit_logs.rs  emojis.rs  files.rs  search.rs  users.rs
crates/core/permissions/: Cargo.toml
crates/core/permissions/src/: test.rs
crates/core/permissions/src/models/: channel.rs
crates/core/presence/: Cargo.toml
crates/core/ratelimits/: Cargo.toml
crates/core/search/src/: client.rs  types.rs
crates/daemons/crond/: Cargo.toml
crates/daemons/ospreyd/: Cargo.toml
crates/daemons/pushd/: Cargo.toml
crates/daemons/searchd/src/: index.rs  main.rs
crates/daemons/searchd/src/consumers/: channel_delete.rs  message.rs  message_delete.rs  message_edit.rs  mod.rs
crates/daemons/voice-ingress/: Cargo.toml
crates/daemons/voice-ingress/src/: api.rs
crates/delta/: Cargo.toml  Dockerfile
crates/delta/src/routes/: mod.rs  root.rs
crates/delta/src/routes/channels/: channel_delete.rs  channel_edit.rs  group_remove_member.rs  message_delete.rs  message_send.rs  voice_join.rs  webhook_create.rs
crates/delta/src/routes/customisation/: emoji_create.rs  emoji_edit.rs
crates/delta/src/util/: audit_log_reason.rs
crates/services/autumn/: Cargo.toml
crates/services/autumn/src/: api.rs  exif.rs  metadata.rs
crates/services/gifbox/: Cargo.toml  Dockerfile
crates/services/january/: Cargo.toml  Dockerfile
docs/docs/developers/events/: protocol.md
(+24 files in other folders)
